# general-rest-service

./: .env  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  countleaf-api.code-workspace  docker-compose.yaml  food.py  main.py  mysecrets.py  pyproject.toml  redis_limiter.py  requirements.txt
.github/workflows/: docker-image.yml
app/: api.py  main.py  test_api.py  test_main.py
app/countleaf/: helpers.py  main.py  security.py
app/endpoints/: helpers.py  security.py  sentiment.py  similarity.py  textsummary.py
app/hygieia/: food.py  main.py
core/: api_limiter.py  nltk_dependency.py  redis_limiter.py  security.py
countleaf/: helpers.py  main.py
endpoints/: sentiment.py
hygieia/: food.py
routes/: similarity.py
src/countleaf/: helpers.py
tests/: test_api.py
tests/countleaf/: test_helpers.py
