[tool.poetry]
name = "countleaf"
version = "0.1.0"
description = "provides natural language processing and text analysis."
authors = ["defunsm <salmanhossain500@gmail.com>"]
license = "MIT"
packages = [
    { include = "src/countleaf" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
absl-py = "1.2.0"
anyio = "3.6.1"
astroid = "2.12.11"
astunparse = "1.6.3"
attrs = "22.1.0"
bcrypt = "4.0.0"
beautifulsoup4 = "4.11.1"
cachetools = "5.2.0"
certifi = "2022.9.14"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
cryptography = "38.0.1"
dill = "0.3.5.1"
ecdsa = "0.18.0"
fastapi = "0.82.0"
filelock = "3.8.0"
flake8 = "5.0.4"
flatbuffers = "22.9.24"
gast = "0.4.0"
google-auth = "2.12.0"
google-auth-oauthlib = "0.4.6"
google-pasta = "0.2.0"
grpcio = "1.49.1"
h11 = "0.12.0"
h5py = "3.7.0"
huggingface-hub = "0.10.0"
idna = "3.3"
iniconfig = "1.1.1"
isort = "5.10.1"
joblib = "1.1.0"
keras = "2.10.0"
Keras-Preprocessing = "1.1.2"
lazy-object-proxy = "1.7.1"
Levenshtein = "0.20.5"
libclang = "14.0.6"
Markdown = "3.4.1"
MarkupSafe = "2.1.1"
mccabe = "0.7.0"
nltk = "3.7"
numpy = "1.23.3"
oauthlib = "3.2.1"
opt-einsum = "3.3.0"
packaging = "21.3"
passlib = "1.7.4"
platformdirs = "2.5.2"
pluggy = "1.0.0"
protobuf = "3.19.6"
py = "1.11.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycodestyle = "2.9.1"
pycparser = "2.21"
pydantic = "1.10.2"
pyflakes = "2.5.0"
pylint = "2.15.4"
pyparsing = "3.0.9"
pytest = "7.1.3"
python-dotenv = "0.21.0"
python-jose = "3.3.0"
python-Levenshtein = "0.20.5"
python-multipart = "0.0.5"
PyYAML = "6.0"
rapidfuzz = "2.11.1"
regex = "2022.9.13"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.3.2.post1"
starlette = "0.19.1"
tensorboard = "2.10.1"
tensorboard-data-server = "0.6.1"
tensorboard-plugin-wit = "1.8.1"
tensorflow = "2.10.0"
tensorflow-estimator = "2.10.0"
tensorflow-io-gcs-filesystem = "0.27.0"
termcolor = "2.0.1"
thefuzz = "0.19.0"
tokenizers = "0.12.1"
tomli = "2.0.1"
tomlkit = "0.11.5"
tqdm = "4.64.1"
transformers = "4.22.2"
typing-extensions = "4.3.0"
urllib3 = "1.26.12"
uvicorn = "0.18.3"
Werkzeug = "2.2.2"
wrapt = "1.14.1"
pytest-asyncio = "^0.19.0"
flake8-html = "^0.4.2"
mangum = "^0.15.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

